design the mobile version

--- a/about.html
+++ b/about.html
@@ -63,8 +63,9 @@
             </nav>
           </header>
           <section class="first-container" aria-label="who I am">
-          <section class="introduction about" aria-label="who I am"> <div class="mask">
-                 <h1> GRAPHIC DESIGNERS GLOBAL SUMMIT 2023</h1> </div>       
+          <section class="introduction about" aria-label="who I am">
+              <h3 class="hello-share"> "Hello! Sharing world" </h3>
+                 <h1> GRAPHIC DESIGNERS GLOBAL SUMMIT 2023</h1>    
                          <p class="short-intro">
                     The Global Summit brings together the community of experts, academics, activists
                     who comprise the Graphic designs <br> affiliate network in a different country every two years.
@@ -75,6 +76,11 @@
                       libraries, museums, archives, governments and foundations, lawyers, and activists-we
                        hope, you will consider joining us to build a stronger, more vibrants commons together.
                 </p>
+                <p class="short-intro-mobile">
+                    The Global Summit brings together the community of experts, academics, activists
+                    who comprise the Graphic designs affiliate network in a different country every two years.
+                    This year, we hope to expand our invitation list including organizations and individuals</p>
+
                <p class="contact-us">Please contact us per Email for any further questions about GD Global Summit 2023! </p>
                 <p class="via-mail">gdsummit@gdlagos.org <span>&gt;</span></p>
                 <span class="line-bar"></span>
@@ -89,10 +95,12 @@
     <h2>Graphic Designers Global Summit 2023 Logo</h2>
     <span class="line-bar"></span>
 
-    <p>The logo of GD global Summit 2023 was decided through competition from 8th June to 8th July
+    <p class="competition-date">The logo of GD global Summit 2023 was decided through competition from 8th June to 8th July
          after online public voting and Selection Commitee's judging process, the logo from Nkem Rita
           won the prize. After consultation with Mr. Agwaal, we ptimized the prize winning logo for 
           this year's summit as following: </p>
+          <p class="competition-date-mobile">The logo of GD global Summit 2023 was decided through 
+            competition from 8th June to 8th July</p>
           <img src="img/logo.png" alt="the summit logo">
 </section>
 
@@ -118,6 +126,30 @@
 
 </div>
 </section>
+<section class="about-partner">
+    <h2>Partner</h2>
+    <span class="line-bar"></span>
+
+    <ul class="partner-list">
+          <li class="">
+            <a href="#" class="partner-link mozilla">mozilla</a>
+ </li>
+          <li class="">
+    <a href="#" class="partner-link google">Google</a>
+  </li>
+  <li class="">
+      <a href="#" class="partner-link navier">NAVER</a>
+    </li>
+    <li class="">
+           <a href="#" class="partner-link daumkakao">daumkakao</a>
+           </li>
+          <li class="">
+               <a href="#" class="partner-link airbnb"> <img  class="airbnb-logo" src="img/airbnb1.png" alt=""> airbnb</a>
+           </li>
+                     
+        </ul>
+
+</section>
 
               <footer class="about"> 
                   <div class="about-footer">
@@ -127,7 +159,7 @@
                   <div class="copyright-details"> 
                       <h4>                      2023 Graphic Design Nigeria. Some Rights Reserved.
                         </h4>
-                      <p>Finding innovative approaches and improved solutions to business problems both motivates and drives me.
+                      <p class="footer-note">Finding innovative approaches and improved solutions to business problems both motivates and drives me.
                            In my previous job, I implemented a new communication system that enhanced productivity by 15% in three months</p>
                   </div>
                 </div>
