--- a/index.html
+++ b/index.html
@@ -121,14 +121,17 @@
 
             </section>
 
+            <!-- Guest Speakers -->
+
             <h2 class="featured-speakers"> Featured Speakers</h2>
             <span class="line-bar"></span>
-            <section class="grid-container2" aria-label="working experience">
-                    <article class="speakers-card" aria-label="My Expertise ">
+            <section class="grid-container2" aria-label="working experience" id="invited-speakers">
+                    <!-- <article class="speakers-card" aria-label="My Expertise ">
                        <div class="speakers-image"><img src="img/Capture.png" alt="language details" /></div> 
                        <div class="speakers-details">
                             <h3 class="">Umeh Onyeka</h3>
                             <h5> Get opportunities to network with GD affiliates around the world,</h5>
+                            <span class="line-bar-speaker"></span>
                       <p>Listen to the speakers from various countries about the message of sharing and opening</p>
                        </div>
                     </article>
@@ -137,7 +140,8 @@
              <div class="speakers-details">
               <h3 class="">Umeh Onyeka</h3>
               <h5> Get opportunities to network with GD affiliates around the world,</h5>
-             <p>Listen to the speakers from various countries about the message of sharing and opening</p>
+              <span class="line-bar-speaker"></span>
+              <p>Listen to the speakers from various countries about the message of sharing and opening</p>
              </div>
          </article>
          <article class="speakers-card" aria-label="My Expertise ">
@@ -145,14 +149,16 @@
             <div class="speakers-details">
                     <h3 class="">Umeh Onyeka</h3>
                  <h5> Get opportunities to network with GD affiliates around the world,</h5>
+                 <span class="line-bar-speaker"></span>
                   <p>Listen to the speakers from various countries about the message of sharing and opening</p>
                  </div>
              </article>
              <article class="speakers-card" aria-label="My Expertise ">
-                 <div class="speakers-image"><img src="img/Capture.png" alt="language details" /></div> 
+                 <div class="speakers-image"><img src="img/speaker4.jpg" alt="language details" /></div> 
                  <div class="speakers-details">
                         <h3 class="">Umeh Onyeka</h3>
                      <h5> Get opportunities to network with GD affiliates around the world,</h5>
+                     <span class="line-bar-speaker"></span>
                  <p>Listen to the speakers from various countries about the message of sharing and opening</p>
                  </div>
              </article>
@@ -161,6 +167,7 @@
              <div class="speakers-details">
                  <h3 class="">Umeh Onyeka</h3>
                  <h5> Get opportunities to network with GD affiliates around the world,</h5>
+                 <span class="line-bar-speaker"></span>
              <p>Listen to the speakers from various countries about the message of sharing and opening</p>
             </div>
          </article>
@@ -169,10 +176,13 @@
                  <div class="speakers-details">
                         <h3 class="">Umeh Onyeka</h3>
                         <h5> Get opportunities to network with GD affiliates around the world,</h5>
+                        <span class="line-bar-speaker"></span>
                 <p>Listen to the speakers from various countries about the message of sharing and opening</p>
                 </div>
-             </article>
+             </article> -->
               </section>
+
+              <!-- Partner session  -->
 
               <section class="partner">
                   <h2>Partner</h2>
