Add the footer section in index.html file

--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
           this year's summit as following: </p>
           <p class="competition-date-mobile">The logo of GD global Summit 2023 was decided through 
             competition from 8th June to 8th July</p>
-          <img src="img/logo.png" alt="the summit logo">
+         <a href="index.html"> <img src="img/logo.png" alt="the summit logo"></a>
 </section>
 
 <!-- past Summit Section -->
