--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
             <nav class="navbar">
               <a href="index.html" class="nav-branding"><img src="img/logo1.png" alt="logo image"></a>
-              <ul class="nav-menu">
+              <ul class="nav-menu nav-menu1">
+                  <li class="nav-item home-href">
+                      <a href="index.html" class="nav-link">Home</a>
+                    </li>
                 <li class="nav-item">
                   <a href="about.html" class="nav-link">About</a>
                 </li>
@@ -126,60 +129,7 @@
             <h2 class="featured-speakers"> Featured Speakers</h2>
             <span class="line-bar"></span>
             <section class="grid-container2" aria-label="working experience" id="invited-speakers">
-                    <!-- <article class="speakers-card" aria-label="My Expertise ">
-                       <div class="speakers-image"><img src="img/Capture.png" alt="language details" /></div> 
-                       <div class="speakers-details">
-                            <h3 class="">Umeh Onyeka</h3>
-                            <h5> Get opportunities to network with GD affiliates around the world,</h5>
-                            <span class="line-bar-speaker"></span>
-                      <p>Listen to the speakers from various countries about the message of sharing and opening</p>
-                       </div>
-                    </article>
-                    <article class="speakers-card" aria-label="My Expertise ">
-            <div class="speakers-image"><img src="img/Capture.png" alt="language details" /></div> 
-             <div class="speakers-details">
-              <h3 class="">Umeh Onyeka</h3>
-              <h5> Get opportunities to network with GD affiliates around the world,</h5>
-              <span class="line-bar-speaker"></span>
-              <p>Listen to the speakers from various countries about the message of sharing and opening</p>
-             </div>
-         </article>
-         <article class="speakers-card" aria-label="My Expertise ">
-             <div class="speakers-image"><img src="img/Capture.png" alt="language details" /></div> 
-            <div class="speakers-details">
-                    <h3 class="">Umeh Onyeka</h3>
-                 <h5> Get opportunities to network with GD affiliates around the world,</h5>
-                 <span class="line-bar-speaker"></span>
-                  <p>Listen to the speakers from various countries about the message of sharing and opening</p>
-                 </div>
-             </article>
-             <article class="speakers-card" aria-label="My Expertise ">
-                 <div class="speakers-image"><img src="img/speaker4.jpg" alt="language details" /></div> 
-                 <div class="speakers-details">
-                        <h3 class="">Umeh Onyeka</h3>
-                     <h5> Get opportunities to network with GD affiliates around the world,</h5>
-                     <span class="line-bar-speaker"></span>
-                 <p>Listen to the speakers from various countries about the message of sharing and opening</p>
-                 </div>
-             </article>
-     <article class="speakers-card" aria-label="My Expertise ">
-            <div class="speakers-image"><img src="img/Capture.png" alt="language details" /></div> 
-             <div class="speakers-details">
-                 <h3 class="">Umeh Onyeka</h3>
-                 <h5> Get opportunities to network with GD affiliates around the world,</h5>
-                 <span class="line-bar-speaker"></span>
-             <p>Listen to the speakers from various countries about the message of sharing and opening</p>
-            </div>
-         </article>
-            <article class="speakers-card" aria-label="My Expertise ">
-                  <div class="speakers-image"><img src="img/Capture.png" alt="language details" /></div> 
-                 <div class="speakers-details">
-                        <h3 class="">Umeh Onyeka</h3>
-                        <h5> Get opportunities to network with GD affiliates around the world,</h5>
-                        <span class="line-bar-speaker"></span>
-                <p>Listen to the speakers from various countries about the message of sharing and opening</p>
-                </div>
-             </article> -->
+                    
               </section>
 
               <!-- Partner session  -->
