Add the navbar section in index.html

--- a/about.html
+++ b/about.html
@@ -32,7 +32,10 @@
 
             <nav class="navbar">
               <a href="index.html" class="nav-branding"><img src="img/logo1.png" alt="logo image"></a>
-              <ul class="nav-menu">
+              <ul class="nav-menu nav-menu1">
+                  <li class="nav-item home-href">
+                      <a href="index.html" class="nav-link">Home</a>
+                    </li>
                 <li class="nav-item">
                   <a href="#" class="nav-link">About</a>
                 </li>
@@ -157,10 +160,10 @@
                       <img src="img/logo2.png" alt="footer logo">   
                   </div>
                   <div class="copyright-details"> 
-                      <h4>                      2023 Graphic Design Nigeria. Some Rights Reserved.
+                      <h4>                      2023 Graphic Designs Nigeria. Some Rights Reserved.
                         </h4>
-                      <p class="footer-note">Finding innovative approaches and improved solutions to business problems both motivates and drives me.
-                           In my previous job, I implemented a new communication system that enhanced productivity by 15% in three months</p>
+                      <p class="footer-note">Graphics is the soul of a website and permanent branding of a company. 
+                          We brand products that communicate tailored messages to the targeted audience</p>
                   </div>
                 </div>
               </footer>
