--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
                       <img src="img/logo2.png" alt="footer logo">   
                   </div>
                   <div class="copyright-details"> 
-                      <h4>                      2023 Graphic Design Nigeria. Some Rights Reserved.
+                      <h4>                      2023 Graphic Designs Nigeria. Some Rights Reserved.
                         </h4>
-                      <p>Finding innovative approaches and improved solutions to business problems both motivates and drives me.
-                           In my previous job, I implemented a new communication system that enhanced productivity by 15% in three months</p>
+                      <p> Graphics is the soul of a website and permanent branding of a company. 
+                        We brand products that communicate tailored messages to the targeted audience</p>
                   </div>
               </footer>
    
