add the video link of the capstone project

--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
            <a href="#" class="partner-link daumkakao">daumkakao</a>
            </li>
           <li class="">
-               <a href="#" class="partner-link airbnb"> <img  class="airbnb-logo" src="img/airbnb1.png" alt=""> airbnb</a>
+               <a href="#" class="partner-link airbnb"> <img  class="airbnb-logo" src="img/airbnb3.png" alt=""> </a>
            </li>
                      
         </ul>
