--- a/index.html
+++ b/index.html
@@ -139,20 +139,20 @@
                   <span class="line-bar"></span>
 
                   <ul class="partner-list">
-                        <li class="">
+                        <li>
                           <a href="#" class="partner-link mozilla">mozilla</a>
                </li>
-                        <li class="">
+                        <li>
                   <a href="#" class="partner-link google">Google</a>
                 </li>
-                <li class="">
+                <li>
                     <a href="#" class="partner-link navier">NAVER</a>
                   </li>
-                  <li class="">
+                  <li>
                          <a href="#" class="partner-link daumkakao">daumkakao</a>
                          </li>
-                        <li class="">
-                             <a href="#" class="partner-link airbnb"> <img  class="airbnb-logo" src="img/airbnb1.png" alt=""> airbnb</a>
+                        <li>
+                             <a href="#" class="partner-link airbnb"> <img  class="airbnb-logo" src="img/airbnb3.png" alt="airbnb logo"> </a>
                          </li>
                                    
                       </ul>
