update the readMe

--- a/index.html
+++ b/index.html
@@ -91,42 +91,42 @@
       <h2 class="main-program">Main Program</h2>
       <span class="line-bar"></span>
 
-      <section class="grid-container" aria-label="working experience">
+      <section class="grid-container" aria-label="summit program">
         <article class="main-card" aria-label="My Expertise ">
-          <img src="img/lectures1.png" alt="language details" />
-          <h3 class="">Lecture</h3>
+          <img src="img/lectures1.png" alt="lecture details" />
+          <h3>Lecture</h3>
           <p>
             Listen to the speakers from various countries about the message of
             sharing and opening
           </p>
         </article>
-        <article class="main-card" aria-label="My Expertise ">
-          <img src="img/exhibition1.png" alt="language details" />
-          <h3 class="">GC Exhibition</h3>
+        <article class="main-card" aria-label="summit program ">
+          <img src="img/exhibition1.png" alt="Exhibition details" />
+          <h3>GC Exhibition</h3>
           <p>
             Appreciate various creations applying GD license of artist
             organized, from Art Center Lagos
           </p>
         </article>
-        <article class="main-card" aria-label="My Expertise ">
-          <img src="img/forum1.png" alt="language details" />
-          <h3 class="">Forum</h3>
+        <article class="main-card" aria-label="summit program ">
+          <img src="img/forum1.png" alt="forum details" />
+          <h3>Forum</h3>
           <p>
             Have the time to share your thoughts and opinions with experts for
             each topic
           </p>
         </article>
-        <article class="main-card" aria-label="My Expertise ">
-          <img src="img/workshop1.png" alt="language details" />
-          <h3 class="">Workshop</h3>
+        <article class="main-card" aria-label="summit program ">
+          <img src="img/workshop1.png" alt="workshop details" />
+          <h3>Workshop</h3>
           <p>
             Try creating your own work using open source license rather than
             just watching at it.
           </p>
         </article>
-        <article class="main-card" aria-label="My Expertise">
-          <img src="img/ignite2.png" alt="language details" />
-          <h3 class="">GC Ignite</h3>
+        <article class="main-card" aria-label="summit program">
+          <img src="img/ignite2.png" alt="ignite details" />
+          <h3>GC Ignite</h3>
           <p>
             Get opportunities to network with GD affiliates around the world,
             also after the summit
