Create an image folder

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </p>
         </article>
         <article class="main-card" aria-label="summit program">
-            <img src="img/ignite2.png" alt="ignite summit details" />
+            <img src="img/ignite.png" alt="ignite forum"/>
           <h3>GC Ignite</h3>
           <p>
             Get opportunities to network with GD affiliates around the world,
