Perform the required changes

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
   <body>
     <!-- Navigation Section  -->
 
+    <section class="home-container">
     <header>
       <nav class="top-header">
         <ul class="top-nav">
@@ -98,6 +99,7 @@
         <p class="via-mail">gdsummit@gdlagos.org <span>&gt;</span></p>
         <span class="line-bar"></span>
       </section>
+    </section>
     </section>
 
     <!-- Main Summit Section -->
