--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <!-- Navigation Section  -->
 
+    <section class="home-container">
     <header>
       <nav class="top-header">
         <ul class="top-nav">
@@ -84,6 +85,7 @@
         </p>
       </section>
     </section>
+  </section>
 
     <!-- Main Program Section -->
 
