Add image description in index.html

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <ul class="top-nav">
           <li class="top-item">
             <a href="#" class="nav-link"
-              ><img src="img/facebook-icon.png" alt=""
+              ><img src="img/facebook-icon.png" alt="facebook-icon"
             /></a>
           </li>
           <li class="top-item">
-            <a href="#" class="nav-link"><img src="img/t-icon.png" alt=""/></a>
+            <a href="#" class="nav-link"><img src="img/t-icon.png" alt="twitter icon"/></a>
           </li>
           <li class="top-item">
             <a href="#" class="nav-link">English</a>
@@ -68,8 +68,8 @@
         </div>
       </nav>
     </header>
-    <section class="first-container" aria-label="who I am">
-      <section class="introduction" aria-label="who I am">
+    <section class="first-container" aria-label="program introduction">
+      <section class="introduction" aria-label="program venue and time">
         <h3 class="">"Hello! Sharing world"</h3>
         <div class="mask">
           <h1>GRAPHIC DESIGNERS GLOBAL SUMMIT 2023</h1>
@@ -147,13 +147,13 @@
     <span class="line-bar"></span>
     <section
       class="grid-container2"
-      aria-label="working experience"
+      aria-label="invited  speakers"
       id="invited-speakers"
     ></section>
 
     <!-- Partner session  -->
 
-    <section class="partner">
+    <section class="partner" aria-label="partners  section">
       <h2>Partner</h2>
       <span class="line-bar"></span>
 
