Add link to program and sponsor in the nav bar

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <a href="about.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Program</a>
+            <a href="#program" class="nav-link">Program</a>
           </li>
           <li class="nav-item">
             <a href="#contact-me" class="nav-link">Join</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Sponsor</a>
+            <a href="#partners" class="nav-link">Sponsor</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">News</a>
@@ -89,7 +89,7 @@
 
     <!-- Main Program Section -->
 
-    <section class="forum">
+    <section class="forum" id="program">
       <h2 class="main-program">Main Program</h2>
       <span class="line-bar"></span>
 
@@ -153,7 +153,7 @@
 
     <!-- Partner session  -->
 
-    <section class="partner" aria-label="partners  section">
+    <section class="partner" aria-label="partners  section" id="partners">
       <h2>Partner</h2>
       <span class="line-bar"></span>
 
