Remove the logo outside nav tag

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
           </li>
         </ul>
       </nav>
-
-      <nav class="navbar">
+      <div class="navbar">
         <a href="index.html" class="nav-branding"
           ><img src="img/logo1.png" alt="logo image"
         /></a>
@@ -66,7 +65,7 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-      </nav>
+      </div>
     </header>
     <section class="first-container" aria-label="program introduction">
       <section class="introduction" aria-label="program venue and time">
