Center the footer logo

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <nav class="top-header">
         <ul class="top-nav">
           <li class="top-item">
-            <a href="#" class="nav-link"
+            <a href="https://web.facebook.com/onyeka2k" class="nav-link"
               ><img src="img/facebook-icon.png" alt="facebook-icon"
             /></a>
           </li>
           <li class="top-item">
-            <a href="#" class="nav-link"><img src="img/t-icon.png" alt="twitter icon"/></a>
+            <a href="https://twitter.com/donmark2k" class="nav-link"><img src="img/t-icon.png" alt="twitter icon"/></a>
           </li>
           <li class="top-item">
             <a href="#" class="nav-link">English</a>
@@ -45,7 +45,7 @@
             <a href="#program" class="nav-link">Program</a>
           </li>
           <li class="nav-item">
-            <a href="#contact-me" class="nav-link">Join</a>
+            <a href="#" class="nav-link">Join</a>
           </li>
           <li class="nav-item">
             <a href="#partners" class="nav-link">Sponsor</a>
@@ -54,7 +54,7 @@
             <a href="#" class="nav-link">News</a>
           </li>
           <li class="nav-item">
-            <a href="#contact-me" class="nav-link">
+            <a href="#" class="nav-link">
               <span> GD Campaign</span></a
             >
           </li>
