--- a/index.html
+++ b/index.html
@@ -11,80 +11,80 @@
     <!-- Navigation Section  -->
 
     <section class="home-container">
-    <header>
-      <nav class="top-header">
-        <ul class="top-nav">
-          <li class="top-item">
-            <a href="https://web.facebook.com/onyeka2k" class="nav-link"
-              ><img src="img/facebook-icon.png" alt="facebook-icon"
-            /></a>
-          </li>
-          <li class="top-item">
-            <a href="https://twitter.com/donmark2k" class="nav-link"><img src="img/t-icon.png" alt="twitter icon"/></a>
-          </li>
-          <li class="top-item">
-            <a href="#" class="nav-link">English</a>
-          </li>
-          <li class="top-item">
-            <a href="#" class="nav-link">login</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="navbar">
-        <a href="index.html" class="nav-branding"
-          ><img src="img/logo1.png" alt="logo image"
-        /></a>
-        <ul class="nav-menu nav-menu1">
-          <li class="nav-item home-href">
-            <a href="index.html" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="about.html" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#program" class="nav-link">Program</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Join</a>
-          </li>
-          <li class="nav-item">
-            <a href="#partners" class="nav-link">Sponsor</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">News</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <span> GD Campaign</span></a
-            >
-          </li>
-        </ul>
+      <header>
+        <nav class="top-header">
+          <ul class="top-nav">
+            <li class="top-item">
+              <a href="https://web.facebook.com/onyeka2k" class="nav-link"
+                ><img src="img/facebook-icon.png" alt="facebook-icon"
+              /></a>
+            </li>
+            <li class="top-item">
+              <a href="https://twitter.com/donmark2k" class="nav-link"
+                ><img src="img/twitter-icon.png" alt="twitter icon"
+              /></a>
+            </li>
+            <li class="top-item">
+              <a href="#" class="nav-link">English</a>
+            </li>
+            <li class="top-item">
+              <a href="#" class="nav-link">login</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="navbar">
+          <a href="index.html" class="nav-branding"
+            ><img src="img/logo1.png" alt="logo image"
+          /></a>
+          <ul class="nav-menu nav-menu1">
+            <li class="nav-item home-href">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#program" class="nav-link">Program</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Join</a>
+            </li>
+            <li class="nav-item">
+              <a href="#partners" class="nav-link">Sponsor</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">News</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link"> <span> GD Campaign</span></a>
+            </li>
+          </ul>
 
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
         </div>
-      </div>
-    </header>
-    <section class="first-container" aria-label="program introduction">
-      <section class="introduction" aria-label="program venue and time">
-        <h3 class="">"Hello! Sharing world"</h3>
-        <div class="mask">
-          <h1>GRAPHIC DESIGNERS GLOBAL SUMMIT 2023</h1>
-        </div>
-        <p class="short-intro">
-          A joyful celebration believing in the value of openness and sharing,
-          creating a positive with people from over 80 countries is taking place
-          in January, in Nigeria.
-        </p>
-        <p class="time">2023.01.03(TUE) ~ 04(WED)</p>
-        <p class="venue">
-          @ National Theatre and Museum, Art Center Lagos and more
-        </p>
+      </header>
+      <section class="first-container" aria-label="program introduction">
+        <section class="introduction" aria-label="program venue and time">
+          <h3 class="">"Hello! Sharing world"</h3>
+          <div class="mask">
+            <h1>GRAPHIC DESIGNERS GLOBAL SUMMIT 2023</h1>
+          </div>
+          <p class="short-intro">
+            A joyful celebration believing in the value of openness and sharing,
+            creating a positive with people from over 80 countries is taking
+            place in January, in Nigeria.
+          </p>
+          <p class="time">2023.01.03(TUE) ~ 04(WED)</p>
+          <p class="venue">
+            @ National Theatre and Museum, Art Center Lagos and more
+          </p>
+        </section>
       </section>
     </section>
-  </section>
 
     <!-- Main Program Section -->
 
@@ -94,7 +94,7 @@
 
       <section class="grid-container" aria-label="summit program">
         <article class="main-card" aria-label="My Expertise ">
-          <img src="img/lectures1.png" alt="lecture details" />
+          <img src="img/lectures.png" alt="lecture details image" />
           <h3>Lecture</h3>
           <p>
             Listen to the speakers from various countries about the message of
@@ -102,7 +102,7 @@
           </p>
         </article>
         <article class="main-card" aria-label="summit program ">
-          <img src="img/exhibition1.png" alt="Exhibition details" />
+          <img src="img/exhibition.png" alt="Exhibition details image" />
           <h3>GC Exhibition</h3>
           <p>
             Appreciate various creations applying GD license of artist
@@ -110,7 +110,7 @@
           </p>
         </article>
         <article class="main-card" aria-label="summit program ">
-          <img src="img/forum1.png" alt="forum details" />
+          <img src="img/forum.png" alt="forum details image" />
           <h3>Forum</h3>
           <p>
             Have the time to share your thoughts and opinions with experts for
@@ -118,7 +118,7 @@
           </p>
         </article>
         <article class="main-card" aria-label="summit program ">
-          <img src="img/workshop1.png" alt="workshop details" />
+          <img src="img/workshop.png" alt="workshop details image" />
           <h3>Workshop</h3>
           <p>
             Try creating your own work using open source license rather than
@@ -126,7 +126,7 @@
           </p>
         </article>
         <article class="main-card" aria-label="summit program">
-            <img src="img/ignite.png" alt="ignite forum"/>
+          <img src="img/ignite.png" alt="ignite forum image" />
           <h3>GC Ignite</h3>
           <p>
             Get opportunities to network with GD affiliates around the world,
@@ -171,7 +171,7 @@
         </li>
         <li>
           <a href="#" class="partner-link airbnb">
-            <img class="airbnb-logo" src="img/airbnb3.png" alt="airbnb logo" />
+            <img class="airbnb-logo" src="img/airbnb.png" alt="airbnb logo" />
           </a>
         </li>
       </ul>
