Remove about link in about.html

--- a/about.html
+++ b/about.html
@@ -15,12 +15,12 @@
       <nav class="top-header">
         <ul class="top-nav">
           <li class="top-item">
-            <a href="#" class="nav-link"
-              ><img src="img/facebook-icon.png" alt=""
+            <a href="https://web.facebook.com/onyeka2k" class="nav-link"
+              ><img src="img/facebook-icon.png" alt="facebook-icon"
             /></a>
           </li>
           <li class="top-item">
-            <a href="#" class="nav-link"><img src="img/t-icon.png" alt=""/></a>
+            <a href="https://twitter.com/donmark2k" class="nav-link"><img src="img/twitter-icon.png" alt=" twitter icon"/></a>
           </li>
           <li class="top-item">
             <a href="#" class="nav-link">English</a>
@@ -31,31 +31,28 @@
         </ul>
       </nav>
 
-      <nav class="navbar">
+      <div class="navbar">
         <a href="index.html" class="nav-branding"
           ><img src="img/logo1.png" alt="logo image"
         /></a>
         <ul class="nav-menu nav-menu1">
-          <li class="nav-item home-href">
+          <li class="nav-item home-ref">
             <a href="index.html" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Program</a>
           </li>
           <li class="nav-item">
-            <a href="#contact-me" class="nav-link">Join</a>
+            <a href="" class="nav-link">Join</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Sponsor</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">News</a>
+            <a href="#news" class="nav-link">News</a>
           </li>
           <li class="nav-item">
-            <a href="#contact-me" class="nav-link">
+            <a href="#campaign" class="nav-link">
               <span> GD Campaign</span></a
             >
           </li>
@@ -66,7 +63,7 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-      </nav>
+      </div>
     </header>
     <section class="first-container" aria-label="who I am">
       <section class="introduction about" aria-label="who I am">
@@ -104,7 +101,7 @@
 
     <!-- Main Summit Section -->
 
-    <section class="summit">
+    <section class="summit" id="campaign">
       <h2>Graphic Designers Global Summit 2023 Logo</h2>
       <span class="line-bar"></span>
 
@@ -123,7 +120,7 @@
     </section>
 
     <!-- past Summit Section -->
-    <section class="past-summit">
+    <section class="past-summit" id="news">
       <h2>See the past GD Global Summits</h2>
       <span class="line-bar"></span>
 
