Add the footer logo in the logo section in about.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
         <div class="navbar">
           <a href="index.html" class="nav-branding"
-            ><img src="img/logo1.png" alt="logo image"
+            ><img src="img/header-logo.png" alt="logo image"
           /></a>
           <ul class="nav-menu nav-menu1">
             <li class="nav-item home-href">
@@ -176,9 +176,9 @@
         </li>
       </ul>
     </section>
-    <footer class="home-page">
+    <footer class="home-page" aria-label="footer  section">
       <div class="logo2">
-        <img src="img/logo2.png" alt="footer logo" />
+        <img src="img/footer-logo.png" alt="footer logo" />
       </div>
       <div class="copyright-details">
         <h4>2023 Graphic Designs Nigeria. Some Rights Reserved.</h4>
