--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
       <div class="navbar">
         <a href="index.html" class="nav-branding"
-          ><img src="img/logo1.png" alt="logo image"
+          ><img src="img/header-logo.png" alt="logo image"
         /></a>
         <ul class="nav-menu nav-menu1">
           <li class="nav-item home-ref">
@@ -65,8 +65,8 @@
         </div>
       </div>
     </header>
-    <section class="first-container" aria-label="who I am">
-      <section class="introduction about" aria-label="who I am">
+    <section class="first-container" aria-label="who we are">
+      <section class="introduction about" aria-label="Our mission">
         <h3 class="hello-share">"Hello! Sharing world"</h3>
         <h1>GRAPHIC DESIGNERS GLOBAL SUMMIT 2023</h1>
         <p class="short-intro">
@@ -93,7 +93,7 @@
           Please contact us per Email for any further questions about GD Global
           Summit 2023!
         </p>
-        <p class="via-mail">gdsummit@gdlagos.org <span>&gt;</span></p>
+        <p class="via-mail"><a href="mailto:chukwuemekavp@gmail.com">gdsummit@gdlagos.org</a> <span>&gt;</span></p>
         <span class="line-bar"></span>
       </section>
     </section>
@@ -101,15 +101,15 @@
 
     <!-- Main Summit Section -->
 
-    <section class="summit" id="campaign">
+    <section class="summit" id="campaign" aria-label="competition winners  section">
       <h2>Graphic Designers Global Summit 2023 Logo</h2>
       <span class="line-bar"></span>
 
       <p class="competition-date">
         The logo of GD global Summit 2023 was decided through competition from
-        8th June to 8th July after online public voting and Selection Commitee's
-        judging process, the logo from Nkem Rita won the prize. After
-        consultation with Mr. Agwaal, we ptimized the prize winning logo for
+        8th June to 8th July after online public voting and Selection Committee's
+        judging process, the logo from Daniel Rita won the prize. After
+        consultation with Mr. Gabriel, we optimized the prize winning logo for
         this year's summit as following:
       </p>
       <p class="competition-date-mobile">
@@ -120,12 +120,12 @@
     </section>
 
     <!-- past Summit Section -->
-    <section class="past-summit" id="news">
+    <section class="past-summit" id="news" aria-label="past summit  section">
       <h2>See the past GD Global Summits</h2>
       <span class="line-bar"></span>
 
       <p>
-        Take a look at the last two GD Global Sumits which took place in Buenes
+        Take a look at the last two GD Global Summits which took place in Buenes
         Aires and in Warsaw.
       </p>
 
@@ -140,7 +140,7 @@
         </div>
       </div>
     </section>
-    <section class="about-partner">
+    <section class="about-partner" aria-label="partners  section">
       <h2>Partner</h2>
       <span class="line-bar"></span>
 
@@ -159,16 +159,16 @@
         </li>
         <li class="">
           <a href="#" class="partner-link airbnb">
-            <img class="airbnb-logo" src="img/airbnb3.png" alt="" />
+            <img class="airbnb-logo" src="img/airbnb.png" alt=" airbnb logo" />
           </a>
         </li>
       </ul>
     </section>
 
-    <footer class="about">
+    <footer class="about" aria-label="footer  section">
       <div class="about-footer">
         <div class="logo2">
-          <img src="img/logo2.png" alt="footer logo" />
+          <img src="img/footer-logo.png" alt="footer logo" />
         </div>
         <div class="copyright-details">
           <h4>2023 Graphic Designs Nigeria. Some Rights Reserved.</h4>
