Rename the background image name

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </div>
       <div class="copyright-details">
         <h4>2023 Graphic Designs Nigeria. Some Rights Reserved.</h4>
-        <p>
+        <p class="footer-note">
           Graphics is the soul of a website and permanent branding of a company.
           We brand products that communicate tailored messages to the targeted
           audience
