Format the pages

--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
         <nav class="top-header">
           <ul class="top-nav">
             <li class="top-item">
-              <a href="https://web.facebook.com/onyeka2k" class="nav-link"
-                ><img src="img/facebook-icon.png" alt="facebook-icon"
-              /></a>
+              <a href="https://web.facebook.com/onyeka2k" class="nav-link">
+                <img src="img/facebook-icon.png" alt="facebook-icon"/>
+              </a>
             </li>
             <li class="top-item">
-              <a href="https://twitter.com/donmark2k" class="nav-link"
-                ><img src="img/twitter-icon.png" alt=" twitter icon"
-              /></a>
+              <a href="https://twitter.com/donmark2k" class="nav-link">
+                <img src="img/twitter-icon.png" alt=" twitter icon"/>
+              </a>
             </li>
             <li class="top-item">
               <a href="#" class="nav-link">English</a>
@@ -52,7 +52,8 @@
             </li>
             <li class="nav-item">
               <a href="#campaign" class="nav-link">
-                <span> GD Campaign</span></a>
+                <span> GD Campaign</span>
+              </a>
             </li>
           </ul>
           <div class="hamburger">
@@ -101,7 +102,7 @@
     <section
       class="summit"
       id="campaign"
-      aria-label="competition winners  section">
+      aria-label="competition winners section">
       <h2>Graphic Designers Global Summit 2023 Logo</h2>
       <span class="line-bar"></span>
       <p class="competition-date">
