--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <nav class="top-header">
         <ul class="top-nav">
           <li class="top-item">
-            <a href="https://web.facebook.com/onyeka2k" class="nav-link"
-              ><img src="img/facebook-icon.png" alt="facebook-icon"
-            /></a>
+            <a href="https://web.facebook.com/onyeka2k" class="nav-link">
+              <img src="img/facebook-icon.png" alt="facebook-icon"/>
+            </a>
           </li>
           <li class="top-item">
-            <a href="https://twitter.com/donmark2k" class="nav-link"
-              ><img src="img/twitter-icon.png" alt="twitter icon"
-            /></a>
+            <a href="https://twitter.com/donmark2k" class="nav-link">
+              <img src="img/twitter-icon.png" alt="twitter icon"/>
+            </a>
           </li>
           <li class="top-item">
             <a href="#" class="nav-link">English</a>
@@ -31,9 +31,9 @@
         </ul>
       </nav>
       <div class="navbar">
-        <a href="index.html" class="nav-branding"
-          ><img src="img/header-logo.png" alt="logo image"
-        /></a>
+        <a href="index.html" class="nav-branding">
+          <img src="img/header-logo.png" alt="logo image"/>
+        </a>
         <ul class="nav-menu nav-menu1">
           <li class="nav-item">
             <a href="about.html" class="nav-link">About</a>
@@ -82,7 +82,6 @@
     <section class="forum" id="program">
       <h2 class="main-program">Main Program</h2>
       <span class="line-bar"></span>
-
       <section class="grid-container" aria-label="summit program">
         <article class="main-card" aria-label="My Expertise ">
           <img src="img/lectures.png" alt="lecture details image" />
@@ -136,8 +135,8 @@
     <section
       class="grid-container2"
       aria-label="invited  speakers"
-      id="invited-speakers"
-    ></section>
+      id="invited-speakers">
+    </section>
     <!-- Partner session  -->
     <section class="partner" aria-label="partners  section" id="partners">
       <h2>Partner</h2>
